	* Follow-up to bug #14066: htmlArea RTE: Erratic handling of oncut and onpaste events
	* Updated NEWS.txt as follow-up to #13580: htmlArea RTE: Extjize the RTE

2010-04-12  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #9851: LICENSE.txt refers to wrong webpage on typo3.com

2010-04-12  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13710: Flashmessages in t3lib_fullsearch (Thanks to Georg Ringer)
	* Added feature #13508: Use exec_TRUNCATEquery() instead of DELETE FROM throughout the core
	* Fixed bug #13945: Missing key on l18n_parent in tt_content table

2010-04-12  Benjamin Mack  <benni@typo3.org>

	* Added Feature #12066: Added constants throughout the core for LF, CR, TAB (Thanks to Oliver Klee)

2010-04-12  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14054: CSS Styled Content has no manual

2010-04-12  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #14069: New install tool refactoring uses FE layer for templating instead of t3lib_parsehtml
	* Fixed bug #14070: require_once to class.tslib_content.php in sysext/install/mod/class.tx_install.php should be deleted 
	* Fixed bug #14071: Convert some characters in copyright of the stand alone install tool to XHTML character entities 

2010-04-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14062: Text Content element crashes (thanks to Jigal van Hemert)
	* Fixed bug #10629: class and title parameters of typolinks get broken
	* Fixed bug #14066: htmlArea RTE: Erratic handling of oncut and onpaste events
	* Added feature #14067: htmlARea RTE: Eliminate namespace pollution
	* Added feature #14068: htmlARea RTE: Always rely on ExtJS browser identification

2010-04-11  Francois Suter  <francois@typo3.org>

	* Fixed bug #14005: Moving a page with IRRE records misplaces IRRE records
	* Cleanup #9581: Adapt t3lib_exec to PHP5 and CGLs (thanks to Martin Kutschker and Felix Oertel)

2010-04-11  Patrick Broens  <patrick@patrickbroens.nl>

	* Added feature #14064: Install tool refactoring
